# cmaketest

./: CMakeLists.txt  gcc.cmake
app/src/: main.c
